Add ParallelStream checking and multithreading checking